# RIM

./: .env.example  .gitignore  AI_INDEX.md  ChallengeMode주문서.md  PROJECT_CANON.md  README.md  REENTRY.md  RIM Product Factory Phase 2A 외주 주문서.md  RIM Product Factory Phase 2B-1 외주 주.md  RIM Product Factory Phase 2D-0 외주 주.md  RIM Product Factory Phase 2D-1.md  RIMProductFactory.md  RIMProductFactoryPhase1.5.md  RIMProductFactoryPhase1.6.md  RIMProductFactoryPhase1.6b.md  RIM_FANAL.md  RIM저장소재검수및보완요구서.md  SCOPE.md  VERIFICATION.md  checklist.md  pyproject.toml
architecture/: atlas.json  atlas.schema.json  index.html  manifest.toml
repo_idea_miner/: __init__.py  __main__.py  architecture_atlas.py  architecture_context.py  architecture_render.py  architecture_scanner.py  ceiling.py  challenge_daemon.py  challenge_dashboard.py  challenge_dashboard_data.py  challenge_db.py  challenge_key_scheduler.py  challenge_pipeline.py  challenge_prompts.py  challenge_renderer.py  challenge_schemas.py  challenge_search_pipeline.py  challenge_validate.py  cli.py  cli_handlers.py  config.py  errors.py  evidence.py  factory_anti_hardcode.py  factory_autopilot_desks.py  factory_autopilot_schemas.py  factory_continue.py  factory_core_gates.py  factory_core_pipeline.py  factory_core_prompts.py  factory_core_schemas.py  factory_coverage.py  factory_db.py  factory_desks.py  factory_draft_execution.py  factory_frozen.py  factory_gates.py  factory_interaction_ui.py  factory_labels.py  factory_lane_executors.py  (+40 more)
scripts/: clean_runs.py
tests/: conftest.py  test_ai_task_fixtures.py  (+74 more)
(+46 files in other folders)
